// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render different states based on actions:  should handle decrease correctly 1`] = `
Object {
  "counter": -1,
}
`;

exports[`should render different states based on actions:  should handle decrease correctly 2`] = `
Object {
  "counter": -2,
}
`;

exports[`should render different states based on actions:  should handle increase correctly 1`] = `
Object {
  "counter": 0,
}
`;

exports[`should render different states based on actions:  should handle increase correctly 2`] = `
Object {
  "counter": 1,
}
`;

exports[`should render different states based on actions:  should handle increase correctly 3`] = `
Object {
  "counter": 2,
}
`;

exports[`should render different states based on actions:  should handle reset correctly 1`] = `
Object {
  "counter": 0,
}
`;

exports[`should render different states based on actions:  should handle reset with dispatch correctly 1`] = `
Object {
  "counter": 0,
}
`;
